Responsiveness fixed for movie details and actor details, add review moved down to reviews and got a new styling ( not responsive atm)

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,22 +1,5 @@
 /*__________Profile__________*/
-@media only screen and (max-width: 320px) {
-    .profile-card{
-        width: 90vw;
-    }
-    .new-list{
-        width: 90vw;
-    }
-    .profile-form > form {
-        width: 75vw;
-    }
-    .user-detail-item {
-        width: 70vw;
-        margin: auto;
-    }
-    .profile-user-name{
-        margin: 110px auto 60px auto;
-    }
-}
+
 
 .profile-page {
     width: 100vw;
@@ -146,3 +129,34 @@
     font-size: 11px;
     color: white;
 } */
+
+@media only screen and (max-width: 1070px) {
+    .profile-card{
+        width: 90vw;
+    }
+    .profile-form > form{
+        width: 80vw;
+    }
+    .new-list{
+        width: 90vw;
+    }
+ 
+}
+@media only screen and (max-width: 320px) {
+    .profile-card{
+        width: 90vw;
+    }
+    .new-list{
+        width: 90vw;
+    }
+    .profile-form > form {
+        width: 75vw;
+    }
+    .user-detail-item {
+        width: 70vw;
+        margin: auto;
+    }
+    .profile-user-name{
+        margin: 110px auto 60px auto;
+    }
+}
